updated the deploy.yml file for cicd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,38 @@
-name: Deploy React App to S3
+name: Deploy to AWS S3
 
 on:
   push:
     branches:
-      - main  # Trigger deployment only on pushes to the main branch
+      - main  # Trigger deployment on push to the main branch
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          node-version: 16  # Use the Node.js version required by your project
+          node-version: '14'  # You can use any version of Node.js you're working with
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
 
-      - name: Build React app
-        run: npm run build
+      - name: Build the React app
+        run: |
+          npm run build
 
-      - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@v0.5.1
+      - name: Configure AWS CLI
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          args: --acl public-read --delete
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'eu-north-1'  # Replace with your AWS region
+
+      - name: Sync files to S3
+        run: |
+          aws s3 sync ./build/ s3://www.vivasea.no --acl public-read --delete
